style.css
.header {
  display: flex;
  flex-direction: column;
  font-family: "Roboto", sans-serif;
  background-color: #1f2937;
  padding: 20px;
}

/* TODO: Separate header and section 1  */

.toplinks {
  display: flex;
}

h3 {
  font-weight: 24px;
  color: #f9faf8;
}

li {
  color: #e5e7eb;
  list-style-type: none;
}

.sectionone {
  display: flex;
  /* flex-wrap: wrap; */
  background-color: #1f2937;
  font-family: "Roboto";
}

.sectionone h1 {
  font-weight: 900;
  color: #f9faf8;
}

.sectionone p {
  font-weight: 18px;
  color: #e5e7eb;
}

.sectionone button {
  border-radius: 10px;
  margin: 10px;
  padding-left: 15px;
  padding-right: 15px;
  font-family: "Roboto";
  background-color: #3882f6;
  color: #f9faf8;
}

.sectiontwo {
  font-family: "Roboto";
}

.squares {
  display: flex;
  flex-grow: 1;
  justify-content: center;
  margin: 90px;
  gap: 30px;
}

.box {
  /* display: flex;
  flex-grow: 1;
  flex-wrap: wrap; */
  border-style: solid;
  border-width: 2px;
  background-color: #f9faf8;
  border-color: #3882f6;
  width: 100px;
  height: 100px;
  border-radius: 6px;
}

.sectiontwo h2 {
  text-align: center;
  font-size: 20px;
  font-weight: 700;
}

.sectionthree {
  display: flex;
  background-color: #e5e7eb;
  font-family: "Roboto";
  font-style: italic;
}

.sectionthree p {
  text-align: center;
  padding: 60px;
}

.card {
  display: flex;
  border-radius: 6px;
  margin: 40px;
  background-color: #3882f6;
  justify-content: center;
  gap: 20px;
}

.cardtext p {
  font-family: "Roboto";
  color: #f9faf8;
}

.cardtext p2 {
  font-family: "Roboto";
  color: #f9faf8;
}

.card button {
  margin: 10px;
  padding-left: 15px;
  padding-right: 15px;
  font-family: "Roboto";
  background-color: #3882f6;
  border-radius: 10px;
  border-color: #f9faf8;
  color: #f9faf8;
}

footer {
  display: flex;
  flex-direction: column;
  font-family: "Roboto", sans-serif;
  color: #e5e7eb;
  background-color: #1f2937;
  padding: 20px;
  align-items: center;
}

